src/css/article.css
@layer pages {
	/**
	 * Article
	 */
	.content-article header {
		margin-bottom: var(--gap-large);

		@media (width <= 768px) {
			margin-bottom: 50px;
		}
	}

	ul {
		padding-left: var(--gap-base);
		list-style-type: circle;
	}

	.article-info {
		margin-top: var(--gap-large);
		list-style: none;
		display: flex;
		justify-content: space-around;
		text-align: center;

		@media (width <= 768px) {
			margin-top: 50px;
			display: block;
		}

		li > span {
			display: block;
		}

		li > span:first-of-type {
			color: var(--text-color-meta);
			font-size: var(--font-size-small);
		}
	}

	.article-body {
		margin-bottom: var(--gap-large);

		h2,
		h3,
		h4,
		h5,
		h6 {
			font-weight: 500;
			margin: calc(var(--gap-large) / 2) 0;
		}

		h2 {
			display: inline-block !important;
			margin-top: var(--gap-large);
			color: var(--text-color-base);
			background: var(--background-svg);
			background-repeat: no-repeat;
			background-position: left center;
			background-size: cover;
			padding-left: var(--gap-base);
			padding-right: var(--gap-base);
			box-decoration-break: clone;
			-webkit-box-decoration-break: clone;
			-moz-background-inline-policy: each-box;
			position: relative;
			z-index: 1;
		}

		h3 {
			margin: calc(var(--gap-large) / 2) 0 var(--gap-base);
		}

		p:not(:last-of-type),
		ul,
		hr {
			margin-bottom: calc(2 * var(--gap-base));
		}

		> p:first-of-type {
			line-height: 150%;

			@media (width <= 768px) {
				line-height: calc(2 * var(--gap-base));
			}
		}

		ul {
			padding-left: 20px;
			list-style-type: circle;
		}
		ul {
			padding-left: var(--gap-base);
			list-style-type: circle;
		}

		li {
			color: var(--text-color-base);
		}

		hr {
			border: none;
			border-top: var(--border-width-base) solid var(--shade-of-grey-light);
		}
	}
}

